 * Graphics:
   * New generic portraits for the Walking Corpse and Soulless
 * Language and i18n:
   * Updated translations: Galician, Scottish Gaelic
 * Multiplayer:
   * Era names no longer support formatting markup in the game setup screen.
   * Removed the Silver Mage from the available leaders for the Rebels faction
     in Age of Heroes.
 * Units:
   * Fixed the Shuja not having the default AMLA.
 * User interface:
   * Fixed minimap buttons appearing without contents or in the wrong state
     during WML start events until they are interacted with or control is given
     to the player for the first time or some other unspecified thing happens.
   * Force uniform font rendering settings across X11 and Apple OS X, avoiding
     color glitches resulting from incorrect applications of subpixel hinting
     (bug #20337).
   * Hide mod options from the user command prompt dialog in the MP lobby when
     not authenticated as a mod.
   * Fixed unit bars, ellipses, and orbs disappearing for individual units in
     replay mode when using Skip Animations/Quick Replays if they moved without
     attacking or otherwise switching to a new animation.
   * Chat Log dialog now starts on the last log page when there are multiple
     pages.
 * WML engine:
   * Added support for [object] duration=turn end
   * New or updated image path functions:
      * ~BW(): converts an image to black and white
      * ~NEG() now supports 0,1 or 3 arguments, allowing solarization effects
   * Added support for SLF in [label] when used inside an event
 * Miscellaneous and bug fixes:
   * Removed abandoned libana network API implementation.
   * Fixed bug#23201 Toggle icons display error in replay.
   * Added --wconsole switch to allocate a console on startup (Windows-only).
   * Added cwesnoth.cmd wrapper script to start Wesnoth with a console
     displaying stdout+stderr (Windows-only).
   * Updated mainline campaigns and multiplayer scenarios to use [filter] status=