@@ -21,6 +21,9 @@ Version 1.13.0+dev:
  * Multiplayer
    * Removed the Silver Mage from the available leaders for the Rebels faction
      in Age of Heroes.
+   * Fixed "Accept whispers from friends only" not working with the default
+     lobby UI, and added a warning every 5 minutes for individual rejected
+     senders.
 
  * Units:
    * Fixed the Shuja not having the default AMLA.
